--- a/src/css/component.css
+++ b/src/css/component.css
@@ -134,6 +134,12 @@
 .cm-task-widget {
   cursor: pointer;
   display: inline-block;
-  width: 1.4em;
   text-align: center;
+}
+
+.cm-md-highlight {
+  background-color: var(--warning-transparent);
+  color: var(--text-primary);
+  padding: 2px 4px;
+  border-radius: 3px;
 }
