--- a/src/css/component.css
+++ b/src/css/component.css
@@ -1,5 +1,3 @@
-/* css/components.css */
-
 .made-with {
   margin-left: 0.25rem;
   color: var(--text-secondary);
@@ -132,9 +130,23 @@
 }
 
 .cm-task-widget {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 1.8em;
+  height: 1.8em;
+
+
+  color: var(--accent);
+  vertical-align: middle;
   cursor: pointer;
-  display: inline-block;
-  text-align: center;
+}
+
+.cm-task-widget svg {
+  width: 3rem;
+  height: 3rem;
+  display: block;
 }
 
 .cm-md-highlight {
@@ -142,4 +154,9 @@
   color: var(--text-primary);
   padding: 2px 4px;
   border-radius: 3px;
+}
+
+.cm-md-strike {
+  text-decoration: line-through;
+  opacity: 0.9;
 }
