--- a/src/css/component.css
+++ b/src/css/component.css
@@ -160,3 +160,13 @@
   text-decoration: line-through;
   opacity: 0.9;
 }
+
+.cm-md-link-widget {
+  color: var(--accent);
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.cm-md-link-widget:hover {
+  opacity: 0.85;
+}
