feat(Editor): Títulos estilizados

--- a/src/css/component.css
+++ b/src/css/component.css
@@ -120,6 +120,7 @@
   opacity: 0;
   font-size: 0;
   width: 0;
+  position: absolute;
 }
 
 .cm-bullet-widget {
@@ -136,7 +137,6 @@
 
   width: 1.8em;
   height: 1.8em;
-
 
   color: var(--accent);
   vertical-align: middle;
@@ -169,4 +169,34 @@
 
 .cm-md-link-widget:hover {
   opacity: 0.85;
+}
+
+/* Title */
+.cm-heading-line {
+  display: flex;
+  align-items: baseline;
+  gap: 0.5rem;
+  line-height: 2.5;
+
+  width: 100%;
+  position: relative;
+  color: var(--text-primary);
+  font-weight: 600;
+}
+
+.cm-heading-line:has(.cm-header-1)::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: .5rem;
+
+  height: 1px;
+  background-color: var(--cm-border, #ddd);
+
+  pointer-events: none;
+}
+
+.cm-header-1 {
+  font-size: 2rem;
 }
