--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -1,8 +1,4 @@
 @import url(./reset.css);
-@import url(./theme.css);
-@import url(./theme-dark.css);
-@import url(./theme-light.css);
-@import url(./theme-terr.css);
-@import url(./theme-terr-dark.css);
+@import url(./themes/theme.css);
 @import url(./layout.css);
-@import url(./component.css);
+@import url(./components/component.css);
