--- a/frontend/src/css/layout.css
+++ b/frontend/src/css/layout.css
@@ -31,7 +31,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 24px 0 10px;
+  padding: 0 16px;
 
   background-color: var(--bg-secondary);
   color: var(--text-primary);
