feat(Menu): excluir separador com dois clicks e ajuste nos titles dos menus

--- a/frontend/src/css/components/tree.css
+++ b/frontend/src/css/components/tree.css
@@ -6,6 +6,14 @@
     height: calc(100dvh - 70px);
 }
 
+.site-menu .tree-container {
+    display: none;
+}
+
+.site-menu.actived .tree-container {
+    display: block;
+}
+
 .tree-empty {
     padding: 20px;
     text-align: center;
