--- a/frontend/src/css/components/editor/editor.css
+++ b/frontend/src/css/components/editor/editor.css
@@ -4,6 +4,7 @@
   flex: 1;
   height: 100%;
   padding: 24px 20px;
+  max-height: calc(100dvh - 70px);
 }
 
 .cm-editor.cm-focused {
@@ -12,4 +13,34 @@
 
 .cm-md-hidden {
   display: none;
+}
+
+/* Transparent Editor Scrollbar */
+.cm-scroller {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(128, 128, 128, 0.2) transparent;
+}
+
+.cm-scroller::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+.cm-scroller::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.cm-scroller::-webkit-scrollbar-thumb {
+  background-color: rgba(128, 128, 128, 0.2);
+  border-radius: 10px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+}
+
+.cm-scroller::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(128, 128, 128, 0.5);
+}
+
+.cm-scroller::-webkit-scrollbar-corner {
+  background: transparent;
 }
