--- a/frontend/src/css/components/tree.css
+++ b/frontend/src/css/components/tree.css
@@ -3,7 +3,7 @@
     color: var(--text-primary);
     font-size: 0.9rem;
     overflow-y: auto;
-    height: calc(100dvh - 170px);
+    height: calc(100dvh - 115px - 2rem);
     outline: none;
     scrollbar-width: thin;
     scrollbar-color: rgba(128, 128, 128, 0.2) transparent;
