--- a/frontend/src/css/components/editor/editor.css
+++ b/frontend/src/css/components/editor/editor.css
@@ -15,7 +15,7 @@
   display: none;
 }
 
-/* Transparent Editor Scrollbar */
+/*  Editor Scrollbar Transparente */
 .cm-scroller {
   scrollbar-width: thin;
   scrollbar-color: rgba(128, 128, 128, 0.2) transparent;
