--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -1,7 +1,8 @@
 @import url(./reset.css);
-@import url(./themes/theme.css);
+@import url(./theme.css);
 @import url(./layout.css);
 @import url(./components/component.css);
+@import url(./components/modal.css);
 
 *::-webkit-scrollbar {
     width: 8px;
